<resources>
    <string name="app_name">wakeApp</string>
    <string name="check_icon">Check!</string>
    <string name="settings_icon">Settings</string>

    <string name="Location_title">(NULL)</string>
    <string name="Location_times">Veces</string>
    <string name="Location_last">(NULL TIME)</string>
    <string name="Monitor_distance">(NULL DISTANCE)</string>
    <string name="Monitor_time">(NULL TIME)</string>
    <string name="Monitor_spotify">¡Enlazá con nuestro Playlist en Spotify
y disfrutá de tu viaje!</string>
    <string name="Playlist_title">(NULL TITLE)</string>
    <string name="Playlist_time">(NULL TIME)</string>
    <string name="Singlep_title">(NULL TITLE)</string>
    <string name="Singlep_author">(NULL AUTHOR)</string>
    <string name="Alarm_soundt">Sonido de alarma.</string>
    <string name="Alarm_soundS">Sonido de alarma seleccionado:</string>
    <string name="VibrateT">Vibrar.</string>
    <string name="VibrateS">Producir una vibración cuando se emita una alerta en la aplicación.</string>
    <string name="SilenceT">Alarma en modo silencio.</string>
    <string name="SilenceS">Hacer sonar la alarma incluso si el teléfono se encuentra en silencio.</string>
    <string name="SpotifyT">Desconectar de Spotify.</string>
    <string name="SpotifyS">Cerrar sesión de la aplicación en Wake APP, no en el teléfono.</string>
    <string name="DistanceT">Distancia de alarma.</string>
    <string name="DistanceS">Mínimo de distancia en el que la aplicación emitirá la alarma.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
