<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:kyleduo="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/kitkat_background"
    tools:context="py.com.pops.wakeapp.AppConfigActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/config_ringtone"
            android:onClick="onClickRingtone"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Alarm_soundt"
                        android:textSize="15dp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Alarm_soundS"
                        android:textSize="10dp"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Ringtone 1"
                    android:textSize="20dp"
                    android:singleLine="true"
                    android:gravity="right"
                    android:id="@+id/ringtone_text"
                    android:paddingTop="10dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/transparent_white">

            </View>



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:id="@+id/config_vibrate"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/VibrateT"
                        android:textSize="15dp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/VibrateS"
                        android:textSize="10dp"
                        android:textColor="@color/white"/>
                </LinearLayout>


            </LinearLayout>

            <com.kyleduo.switchbutton.SwitchButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                kyleduo:kswBackColor="@color/darkred"
                kyleduo:kswThumbColor="@color/white"
                android:id="@+id/config_vibrate_switch"
                android:layout_alignParentRight="true"
                android:gravity="right"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/transparent_white">

            </View>



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:id="@+id/config_silence"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SilenceT"
                        android:textSize="15dp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SilenceS"
                        android:textSize="10dp"
                        android:textColor="@color/white"/>
                </LinearLayout>



            </LinearLayout>

            <com.kyleduo.switchbutton.SwitchButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/config_silence_switch"
                kyleduo:kswBackColor="@color/darkred"
                kyleduo:kswThumbColor="@color/white"
                android:layout_alignParentRight="true"
                android:gravity="right"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/transparent_white">

            </View>



        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/config_distance"
            android:layout_marginTop="10dp"
            android:onClick="onClickDistanceChanger"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DistanceT"
                        android:textSize="15dp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/DistanceS"
                        android:textSize="10dp"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0.5 km"
                    android:textSize="20dp"
                    android:gravity="right"
                    android:paddingTop="10dp"
                    android:id="@+id/config_distance_txt"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/transparent_white">

            </View>



        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
