<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:id="@+id/location_delete_btn"
        android:layout_marginBottom="6dp"
        android:src="@drawable/delete_icon"/>



    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="285dp"
        android:background="@drawable/locations_border"
        android:orientation="vertical"
        android:padding="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="200dp"
            android:id="@+id/google_map_img"
            android:padding="0dp"
            android:layout_margin="0dp"
          />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_margin="0dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:paddingTop="3dp"
                    android:id="@+id/location_name"
                    android:text="@string/Location_title"
                    android:textColor="@color/white"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/location_count"
                        android:text="00"
                        android:paddingLeft="8dp"
                        android:textColor="@color/white"
                        android:textSize="35dp"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="@string/Location_times"
                            android:paddingLeft="8dp"
                            android:id="@+id/location_count_txt"
                            android:layout_weight="2"
                            android:paddingTop="5dp"
                            android:textColor="@color/white"
                            android:textSize="12dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:singleLine="true"
                            android:layout_marginRight="60dp"
                            android:paddingLeft="8dp"
                            android:text="@string/Location_last"
                            android:id="@+id/location_date"
                            android:layout_weight="2"
                            android:textColor="@color/white"
                            android:textSize="12dp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/gotolocation_icon"
        android:id="@+id/location_start_btn"
        android:layout_marginBottom="60dp"

        android:layout_marginRight="15dp"/>


</RelativeLayout>
